Fix inspections